--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,9 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+
+.varela-round-regular {
+  font-family: "Varela Round", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
