--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,10 @@
   font-weight: 400;
   font-style: normal;
 }
+
+.lobster-regular {
+  font-family: "Lobster", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
